# meli-python-nomad

./: pyproject.toml
.github/workflows/: main.yml
nomad/api/: base.py
